finished baseline functionality of config transformer

--- a/Master.config
+++ b/Master.config
@@ -27,9 +27,8 @@
   </appSettings>
 
   <system.net>
-    <mailSettings>
+    <mailSettings env="default">
       <smtp from="me@example.com" deliveryMethod="SpecifiedPickupDirectory">
-        <specifiedPickupDirectory pickupDirectoryLocation="C:\Temp"/>
         <specifiedPickupDirectory pickupDirectoryLocation="C:\Temp"/>
       </smtp>
     </mailSettings>
