finished refactoring config transformer to be a bit less hackish

--- a/Web.config
+++ b/Web.config
@@ -59,4 +59,22 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <connectionStrings>
+    <add name="ApplicationServices" connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|aspnetdb.mdf;User Instance=true" providerName="System.Data.SqlClient"/>
+  </connectionStrings>
+  <appSettings>
+    <add key="SettingOne" value="1.0.0.0"/>
+    <add key="SettingTwo" value="1.0.0.0"/>
+    <add key="SettingThree!!" value="1.0.0.0"/>
+    <add key="webpages:Version" value="1.0.0.0"/>
+    <add key="ClientValidationEnabled" value="true"/>
+    <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
+  </appSettings>
+  <system.net>
+    <mailSettings>
+      <smtp from="me@example.com" deliveryMethod="SpecifiedPickupDirectory">
+        <specifiedPickupDirectory pickupDirectoryLocation="C:\Temp"/>
+      </smtp>
+    </mailSettings>
+  </system.net>
 </configuration>
