added env specific config transformations. now ready for the real world.

--- a/Master.config
+++ b/Master.config
@@ -1,18 +1,18 @@
 ﻿<?xml version="1.0"?>
 <!--
-  For more information on how to configure your ASP.NET application, please visit
-  http://go.microsoft.com/fwlink/?LinkId=152368
-  -->
+For more information on how to configure your ASP.NET application, please visit
+http://go.microsoft.com/fwlink/?LinkId=152368
+-->
 
 <configuration>
-  <connectionStrings>
+	<connectionStrings>
     <add name="ApplicationServices"
          connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|aspnetdb.mdf;User Instance=true"
          providerName="System.Data.SqlClient" />
     <add name="ApplicationServices"
          connectionString="data source=.;Integrated Security=SSPI;AttachDBFilename=aspnetdb.mdf;User Instance=true"
          providerName="System.Data.SqlClient" 
-		 env="ci" />
+         env="ci" />
   </connectionStrings>
 
   <appSettings>
@@ -20,12 +20,14 @@
     <add key="SettingTwo" value="1.0.0.0"/>
     <add key="SettingThree!!" value="1.0.0.0"/>
     <add key="webpages:Version" value="1.0.0.0"/>
+    
     <add key="ClientValidationEnabled" value="true"/>
-    <add key="ClientValidationEnabled" value="true" env="ci" />
+    <add key="ClientValidationEnabled" value="false" env="ci" />
+    
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
-    <add key="UnobtrusiveJavaScriptEnabled" value="true" env="ci" />
+    <add key="UnobtrusiveJavaScriptEnabled" value="false" env="ci" />
   </appSettings>
-
+  
   <system.net>
     <mailSettings env="default">
       <smtp from="me@example.com" deliveryMethod="SpecifiedPickupDirectory">
@@ -38,5 +40,4 @@
       </smtp>
     </mailSettings>
   </system.net>
-
 </configuration>
