--- a/Web.config
+++ b/Web.config
@@ -60,20 +60,20 @@
     </assemblyBinding>
   </runtime>
   <connectionStrings>
-    <add name="ApplicationServices" connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|aspnetdb.mdf;User Instance=true" providerName="System.Data.SqlClient"/>
+    <add name="ApplicationServices" connectionString="data source=.;Integrated Security=SSPI;AttachDBFilename=aspnetdb.mdf;User Instance=true" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings>
     <add key="SettingOne" value="1.0.0.0"/>
     <add key="SettingTwo" value="1.0.0.0"/>
     <add key="SettingThree!!" value="1.0.0.0"/>
     <add key="webpages:Version" value="1.0.0.0"/>
-    <add key="ClientValidationEnabled" value="true"/>
-    <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
+    <add key="ClientValidationEnabled" value="false"/>
+    <add key="UnobtrusiveJavaScriptEnabled" value="false"/>
   </appSettings>
   <system.net>
     <mailSettings>
-      <smtp from="me@example.com" deliveryMethod="SpecifiedPickupDirectory">
-        <specifiedPickupDirectory pickupDirectoryLocation="C:\Temp"/>
+      <smtp from="ci@example.com" deliveryMethod="SpecifiedPickupDirectory">
+        <specifiedPickupDirectory pickupDirectoryLocation="C:\MailDrop"/>
       </smtp>
     </mailSettings>
   </system.net>
